--- a/APP/Modules/User/Tpl/View/index.html
+++ b/APP/Modules/User/Tpl/View/index.html
@@ -1,35 +1,144 @@
 <include file="./APP/Tpl/header.html" />
 <div class="container" style="padding-top:25px">
-	
-    <include file="Public:headerbar" /> 
+
+<div class="row" >
+<div class="span9" >
+
+    <div style="height:90px; margin-bottom:20px; display:block">
     
-<if condition="$post_count">
-    <div class="row amzcontent">
-        <foreach name="post" item="v">
-      		<include file="./APP/Modules/Index/Tpl/Post/single.html" /> 
-        </foreach>
-	</div>
-      
-	<div class="row amznavigation">
-		<div class="amznext" style="text-align:center">
-			{$page_next}      
-		</div>
-	</div>
-      
-	<div id="realpagination" class="row" style=" margin-top:50px;display:none">
-		<div class="pagination pagination-small pagination-centered">
-			{$page_nav}
-		</div>
-	</div>
-<else />
-    <div class="row" style=" margin:30px 0 100px 0;text-align: center">
-        <p style="color: #2D2D2D; font-weight: bold; font-size: 18px;">还木有作品</p>
-        <p><?=$user->username?>还木有分享作品<br />
-            <br />
-        </p>
+      <div class="avatar" style="height:80px; width:80px;">
+        <img class="img-rounded" src="{$user.avatar}" width="80" height="80" />
+      </div>
+      <div id="detailed" class="float-left" style="margin:0 0 0 10px">
+          <div id="name" >
+            <div class="user-detail-name ellipsis float-left" style="max-width:240px;">{$user.username}</div>
+            <if condition="$user[verify]"><i title="认证用户" class="icon2-verify float-left" style="margin-left:5px"></i></if>
+            
+          </div>
+           <div id="user-detail-infor">
+                <i class="icon-map-marker" style="margin:4px 0px 0 0"></i> {$user.location}
+                <i class="icon-briefcase" style="margin:4px 0px 0 10px"></i> {$user.career}
+                <if condition="$user[extraweibo]">
+                <i class="icon-weibo" style="margin:4px 0px 0 10px"></i> <a target="_blank" href="{$user.extraweibo}">新浪微博</a>
+                </if>
+                <if condition="$user[extrablog]">
+                <i class="icon-globe" style="margin:4px 0px 0 10px"></i> <a target="_blank" href="{$user.extrablog}">我的网站</a>
+                </if>
+           </div>
+           
+            <if condition="$visitor">
+            	<div id="followuserstatus">
+                <if condition="isfollow($visitor[id], $user[id])">
+                <a class="my-btn my-btn-gray" onclick="FollowUser('{$user.id}', 1)" href="#" >已关注</a>
+                <else />
+                <a class="my-btn my-btn-red" onclick="FollowUser('{$user.id}', 0)" href="#" >关注</a>
+                </if>
+                </div>
+                <a class="my-btn my-btn-gray" href="#sendMessage" role="button" data-toggle="modal">发私信</a>
+            <else />
+            	<a class="my-btn my-btn-red" href="#loginFront" role="button" data-toggle="modal">关注</a>
+                <a class="my-btn my-btn-gray" href="#loginFront" role="button" data-toggle="modal">发私信</a>
+            </if>
+           
+           
+      </div>
+    
     </div>
-</if>
+    
+    <if condition="$page_name != setting">
+    <div class="row" style="margin-bottom:20px">
+      <div id="user-detail-headerbar">
+        <if condition="$page_name == postOriginal"> <div class="link active"> <else /> <div class="link"> </if>
+        <a href="/user/{$user.id}/">创作</a></div>
+        <if condition="$page_name == share"> <div class="link active"> <else /> <div class="link"> </if>
+        <a href="/user/{$user.id}/share/">分享</a></div>
+        <if condition="$page_name == like"> <div class="link active"> <else /> <div class="link"> </if>
+        <a href="/user/{$user.id}/like/">收藏</a></div>
+      </div>
+    </div>
+    </if>
+        
+    <if condition="$post_count">
+        <div class="row amzcontent">
+            <foreach name="post" item="v">
+                <include file="./APP/Modules/Index/Tpl/Post/single.html" /> 
+            </foreach>
+        </div>
+          
+        <div class="row amznavigation">
+            <div class="amznext" style="text-align:center">
+                {$page_next}      
+            </div>
+        </div>
+          
+        <div id="realpagination" class="row" style=" margin-top:50px;display:none">
+            <div class="pagination pagination-small pagination-centered">
+                {$page_nav}
+            </div>
+        </div>
+    <else />
+        <div class="row" style=" margin:30px 0 100px 0;text-align: center">
+            <p style="color: #2D2D2D; font-weight: bold; font-size: 18px;">还木有作品</p>
+            <p><?=$user->username?>还木有分享作品<br />
+                <br />
+            </p>
+        </div>
+    </if>
+</div>
+
+<div class="span3" style="margin-left:0;">
+    <div style="width:230px; position:fixed">
+		<div class="user-detail-block" style="min-height:90px;">
+                  <div class="information border">
+						<div id="nums">{$user.post|intval}</div>
+                        <div id="title"> 分享 </div>
+                    </div>   
+                    <div class="information border">
+						<div id="nums">{$user.likecount|intval}</div>
+                        <div id="title"> 收藏 </div>
+                    </div>   
+                    <div class="information">
+						<div id="nums">{$user.follow|intval}</div>
+                        <div id="title"> 关注 </div>
+                    </div>   
+        </div>
+        
+        <div class="user-detail-block">
+        	<div class="user-detail-title">关于我</div>
+            {$user.aboutme}
+        </div>
+        
+        <div class="user-detail-block">
+        	<div class="user-detail-title">统计</div>
+            被访问了{$user.viewed}次，共有{$user.postOriginal}部创作，{$user[post] - $user[postOriginal]}部分享，{$user.likecount}部收藏
+        </div>
+    </div>
+</div>
+
+
 
 </div> <!-- /上方 -->
 
+<div id="sendMessage" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="sendMessage" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">发送私信</h3>
+  </div>
+  <div class="modal-body">
+    <form class="form-horizontal" action="{:U('User/Ajax/sendMessage')}" id="sendMessage" method="POST">
+    <input id="uid" name="uid" type="hidden" value="{$user.id}" />
+      <div class="control-group">
+            <label class="control-label2" for="input01">说明</label>
+            <div class="controls2">
+              <textarea placeholder="请填写私信内容" class="span4" id="message" name="message" style="min-height:120px;max-width: 356px;" ></textarea>
+            </div>
+        </div>
+		
+  </div>
+  <div class="modal-footer">
+    <input type="submit" class="btn btn-red" value="恩，发射！" />
+    <button class="btn float-left" data-dismiss="modal" aria-hidden="true">关闭</button>
+  </div>
+  </form>
+</div>
 <include file="./APP/Tpl/footer.html" />
